[gd_scene load_steps=9 format=2]

[ext_resource path="res://Visualizer.gd" type="Script" id=1]
[ext_resource path="res://images/Vtuber_maskandcap.png" type="Texture" id=2]
[ext_resource path="res://images/Vtuber_Eyes.png" type="Texture" id=3]
[ext_resource path="res://images/Vtuber.png" type="Texture" id=4]
[ext_resource path="res://images/Vtuber_wire.png" type="Texture" id=5]
[ext_resource path="res://Visulizers/wire.gd" type="Script" id=6]
[ext_resource path="res://images/Untitled-1.png" type="Texture" id=7]
[ext_resource path="res://Visulizers/base.gd" type="Script" id=8]

[node name="Visualizer" type="Node2D"]
position = Vector2( 32, 696 )
z_index = 1
script = ExtResource( 1 )

[node name="base" type="Sprite" parent="."]
position = Vector2( 608, 160 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 4 )
script = ExtResource( 8 )

[node name="eyes" type="TextureProgress" parent="base"]
visible = false
margin_left = -350.0
margin_top = -994.0
margin_right = -96.0
margin_bottom = -294.0
rect_rotation = -89.9999
texture_progress = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="keys1" type="Node2D" parent="base"]
position = Vector2( -348, -1076 )

[node name="keys2" type="Node2D" parent="base"]
position = Vector2( -316, -1076 )

[node name="keys3" type="Node2D" parent="base"]
position = Vector2( -280, -1142 )

[node name="keys4" type="Node2D" parent="base"]
position = Vector2( -248, -1142 )

[node name="keys5" type="Node2D" parent="base"]
position = Vector2( 248, -1142 )

[node name="keys6" type="Node2D" parent="base"]
position = Vector2( 280, -1142 )

[node name="keys7" type="Node2D" parent="base"]
position = Vector2( 316, -1076 )

[node name="keys8" type="Node2D" parent="base"]
position = Vector2( 348, -1076 )

[node name="helm" type="Sprite" parent="."]
position = Vector2( 608, 160 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 2 )
script = ExtResource( 6 )

[node name="pos1" type="Node2D" parent="helm"]
position = Vector2( -288, -928 )
scale = Vector2( 2, 2 )

[node name="pos2" type="Node2D" parent="helm"]
position = Vector2( -220, -896 )
scale = Vector2( 2, 2 )

[node name="pos3" type="Node2D" parent="helm"]
position = Vector2( -132, -896 )
scale = Vector2( 2, 2 )

[node name="pos4" type="Node2D" parent="helm"]
position = Vector2( -48, -944 )
scale = Vector2( 2, 2 )

[node name="pos5" type="Node2D" parent="helm"]
position = Vector2( 48, -944 )
scale = Vector2( 2, 2 )

[node name="pos6" type="Node2D" parent="helm"]
position = Vector2( 132, -896 )
scale = Vector2( 2, 2 )

[node name="pos7" type="Node2D" parent="helm"]
position = Vector2( 220, -896 )
scale = Vector2( 2, 2 )

[node name="pos8" type="Node2D" parent="helm"]
position = Vector2( 288, -928 )
scale = Vector2( 2, 2 )

[node name="wire" type="Sprite" parent="."]
position = Vector2( 608, 160 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 5 )

[node name="1G" type="Sprite" parent="."]
visible = false
position = Vector2( 608, -144 )
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 7 )
